toggle button / dark mode + class fixes

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   
   .scroll-progress-indicator {
     height: 100%;
-    background-color: #ef2f2f;
+    background-color: rgb(0, 115, 255);;
     width: 0;
     transition: width 0.3s; 
   }
@@ -23,30 +23,6 @@
     scroll-behavior: smooth;
   }
 
-  .underline-effect {
-    position: relative;
-  }
-  
-  .underline-effect::before {
-    content: '';
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #ffffff;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-  }
-  
-  .underline-effect:hover::before {
-    transform: scaleX(1);
-  }
-
-.dark h1 {
-  color: white;
-}
-
 .active{
-  color: #ef2f2f;
+  color: rgb(0, 115, 255);
 }
